Fix layout(scrollbar, table)

--- a/src/.vitepress/theme/styles.css
+++ b/src/.vitepress/theme/styles.css
@@ -190,10 +190,27 @@ blockquote {
 	vertical-align: top;
 }
 
+.spacer {
+	height: 10px;
+}
+
 .badge {
 	border:1px solid #ccc;
 	font-size:8pt;
 	padding:3px;
+}
+
+::-webkit-scrollbar {
+    width: 13px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #242;
+}
+
+::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(180deg, #8a8 0%, #aca 99%);
+	box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);    
 }
 
 @media (max-width: 800px) {
